--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,10 @@ h3{
 }
 
 .entry .content{
-    background-color: #ffffff;
     padding: 1rem;
     text-align: center;
     text-transform: uppercase;
-
+    
 }
 
 h3{
@@ -66,6 +65,17 @@ span{
     color: #db008d;
 }
 
+.button{
+    background-color: #008fd1;
+    color: #ffffff;
+    text-decoration: none;
+    padding: .5rem 3rem;
+    margin: 1rem;
+    display: inline-block;
+}
+
 .entry{
     margin-bottom: 2rem;
+    background-color: #ffffff;
+
 }
